# rucman

./: .gitignore  Cargo.toml  README.md
src/: cmpver.rs  configuration.rs  database.rs  file.rs  handle.rs  lib.rs  package.rs  question.rs  upgrade.rs  version.rs
src/cmpver/: args.rs  main.rs
src/configuration/: options.rs  repository.rs
src/configuration/repository/: sig_level.rs  usage_level.rs
src/version/: errors.rs  rpm_ver.rs
src/version/rpm_ver/: segment.rs
src/version/rpm_ver/segment/: block.rs
tests/: compare-vercmp-cmpver.py  file.rs  vercmp.rs
tests/common/: equal_versions.rs  greater_versions.rs  lesser_versions.rs  mod.rs  parsed_versions.rs  valid_versions.rs
