[package]
name = "rucman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
url = "*"
log = "*"
md5 = "*"
sha2 = "*"

[dev-dependencies]
once_cell = "*"

